fix(style): properly center-align the donor contact management form

--- a/src/features/user/DonationReceipt/DonationReceipt.module.scss
+++ b/src/features/user/DonationReceipt/DonationReceipt.module.scss
@@ -1,5 +1,13 @@
 @import '../../../theme/theme';
 
+.layoutBase {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: calc(100vh - 80px);
+  background: var(--background-base);
+}
+
 .donationReceiptSkeleton {
   display: flex;
   justify-content: center;
@@ -7,13 +15,9 @@
 }
 
 .donationReceiptLayout {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @extend .layoutBase;
   width: 100vw;
-  min-height: calc(100vh - 80px);
   margin-top: 80px;
-  background: var(--background-base);
   @include xsPhoneView {
     padding: 0 2%;
   }
@@ -235,6 +239,12 @@
 }
 
 // donor contact management  styles
+
+.donorContactManagementLayout {
+  @extend .layoutBase;
+  width: calc(100vw - 119px);
+  margin: 80px auto 0 auto;
+}
 
 .donorContactManagement {
   display: flex;
